<resources>
    <string name="app_name">Biker</string>
    <string name="register">Cadastre-se</string>
    <string name="usuario">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>
    <string name="submit">Enviar</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="keep_conected">Manter-me conectado</string>
    <string name="dataAluguel">Data do aluguel</string>
    <string name="percurso">Percurso (KM)</string>
    <string name="inicio">Inicio</string>
    <string name="entrega">Entrega</string>
    <string name="title_historic">Histórico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu">MenuActivity</string>


</resources>